@@ -1,0 +1,15 @@
+subarch kirkwood
+cpuinfo sheevaplug.cpuinfo
+majors 2.6
+flavour kirkwood
+kernel-2.6 linux-image-2.6-kirkwood
+usable \
+  linux-image-2.6-kirkwood \
+  linux-image-2.6.29-1-kirkwood
+unusable \
+  linux-image-2.6-iop32x \
+  linux-image-2.6-netwinder \
+  linux-image-2.6-orion5x \
+  linux-image-2.6-rpc \
+  linux-image-2.6-s3c2410 \
+  linux-image-2.6-ixp4xx
