@@ -21,6 +21,9 @@ base-installer (1.99) UNRELEASED; urgency=low
   [ Jens Seidel ]
   * Minor correction in German translation.  Closes: #512828.
 
+  [ Martin Michlmayr ]
+  * Add support for Marvell's Kirkwood platform.
+
  -- Ian Campbell <ijc@hellion.org.uk>  Mon, 24 Nov 2008 07:13:47 +0000
 
 base-installer (1.98) unstable; urgency=low
